# Swimming_pools

./: .gitignore  CMakeLists.txt  README.md
include/: driver.hpp  group.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: add_water.cpp  close_channels.cpp  connect_pools.cpp  create_groups.cpp  measure_water.cpp
